--- a/index.html
+++ b/index.html
@@ -275,6 +275,8 @@
     <p>Alura - Mergulhe em tecnologia</p>
   </footer>
   <script src="app/main.js"></script>
+  <script src="app/metodoMap.js"></script>
+  <script src="app/metodoForEach.js"></script>
 </body>
 
 </html>
