--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
   <script src="app/metodoForEach.js"></script>
   <script src="app/metodoFilter.js"></script>
   <script src="app/metodoSort.js"></script>
+  <script src="app/metodoReduce.js"></script>
 </body>
 
 </html>
